<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_news"
        android:title="@string/action_news"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/action_teams"
        android:title="@string/action_teams"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/action_tournaments"
        android:title="@string/action_tournaments"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/action_preferences"
        android:title="@string/action_preferences"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_quit"
        android:title="@string/action_quit"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />

</menu>
